Bug Fixed: Opening Browser on report output in directory with spaces wouldn't work (e.g. My Documents)
git-svn-id: https://svn.code.sf.net/p/genj/code/trunk@2787 fbd980a2-0dff-11df-b4b7-0b05b74d0985